added links to al the other pages on my website

--- a/list.html
+++ b/list.html
@@ -20,7 +20,7 @@
     <!-- LOGO -->
     <h2 id="page-header">
         <img id="top-profile" src="./assets/images/profile-pic.jpg" alt="profile pic">
-        <a href="./index.html">Alex Gouge-Schajer | Portfolio</a>
+    <a href="https://thegouge.github.io/">Alex Gouge-Schajer | Portfolio</a>
     </h2>
     <!-- NAVIGATION -->
     <nav id="main-navigation">
@@ -45,11 +45,11 @@
                     <img class="link-img" id="js" src="./assets/images/javascript-logo.png" alt="javascript demos">
                 </button>
                 <div class="dropdown-content">
-                    <a href="./links/char-sheet.html">D&amp;D Character Sheet</a>
-                    <a href="./links/simplejs.html">Simple Stuff</a>
+                    <a href="https://thegouge.github.io/links/char-sheet.html">D&amp;D Character Sheet</a>
+                    <a href="https://thegouge.github.io/links/simplejs.html">Simple Stuff</a>
                 </div>
             </li>
-            <a href="./links/contact.html">
+            <a href="https://thegouge.github.io/links/contact.html">
                 <li>
                     <img class="link-img" src="./assets/images/envelope.png" alt="Contact">
                 </li>
