Fixed and cleaned the Javascript to stay away from the nav

--- a/list.html
+++ b/list.html
@@ -71,10 +71,10 @@
 
             <div id="list-container">
                 <ul id="list">
-                    <li>Get Eggs</li>
-                    <li class="done">Talk with Steve</li>
-                    <li>Overthrow the Patriarchy</li>
-                    <li>Finish Sewing that Quilt Pattern</li>
+                    <li class="item">Get Eggs</li>
+                    <li class="item done">Talk with Steve</li>
+                    <li class="item">Overthrow the Patriarchy</li>
+                    <li class="item">Finish Sewing that Quilt Pattern</li>
                 </ul>
             </div>
         </section>
