--- a/index.html
+++ b/index.html
@@ -23,39 +23,44 @@
     <a href="https://thegouge.github.io/">Alex Gouge-Schajer | Portfolio</a>
     </h2>
     <!-- NAVIGATION -->
-    <nav id="main-navigation">
-        <ul>
-            <a href="https://www.linkedin.com/in/alexander-gouge-schajer-b19695140/">
-                <li>
-                    <img class="link-img" src="./assets/images/In-White-121px-TM.png" alt="LinkedIn">
-                </li>
-            </a>
-            <a href="https://vimeo.com/thegouge">
-                <li>
-                    <img class="link-img" src="./assets/images/vimeo_icon_white.png" alt="Vimeo">
-                </li>
-            </a>
-            <a href="https://github.com/thegouge">
-                <li>
-                    <img class="link-img" src="./assets/images/GitHub-Mark-Light-120px-plus.png" alt="GitHub">
-                </li>
-            </a>
-            <li class="dropdown">
-                <button class="dropbtn">
-                    <img class="link-img" id="js" src="./assets/images/javascript-logo.png" alt="javascript demos">
-                </button>
-                <div class="dropdown-content">
-                    <a href="https://thegouge.github.io/links/char-sheet.html">D&amp;D Character Sheet</a>
-                    <a href="https://thegouge.github.io/links/simplejs.html">Simple Stuff</a>
-                </div>
+<nav id="main-navigation">
+    <ul>
+        <a href="https://www.linkedin.com/in/alexander-gouge-schajer-b19695140/">
+            <li>
+                <img class="link-img" src="../assets/images/In-White-121px-TM.png" alt="LinkedIn">
             </li>
-            <a href="https://thegouge.github.io/links/contact.html">
-                <li>
-                    <img class="link-img" src="./assets/images/envelope.png" alt="Contact">
-                </li>
-            </a>
-        </ul>
-    </nav>
+        </a>
+        <a href="https://github.com/thegouge">
+            <li>
+                <img class="link-img" src="../assets/images/GitHub-Mark-Light-120px-plus.png" alt="GitHub">
+            </li>
+        </a>
+        <li class="dropdown">
+            <button class="dropbtn">
+                <img class="link-img" src="../assets/images/website.png" alt="Websites">
+            </button>
+            <div class="dropdown-content">
+                <a href="https://thegouge.github.io/Real-Estate/">First Website</a>
+                <a href="https://thegouge.github.io/tori-anime/">Tori's Anime Site</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <button class="dropbtn">
+                <img class="link-img" id="js" src="../assets/images/javascript-logo.png" alt="javascript demos">
+            </button>
+<div class="dropdown-content">
+                <a href="https://thegouge.github.io/character-sheet">D&amp;D Character Sheet</a>
+                <a href="https://thegouge.github.io/number-server/">Number Server</a>
+                <a href="./links/simplejs.html">Simple Stuff</a>
+            </div>
+        </li>
+        <a href="https://thegouge.github.io/links/contact.html">
+            <li>
+                <img class="link-img" src="../assets/images/envelope.png" alt="contact">
+            </li>
+        </a>
+    </ul>
+</nav>
     <div class="float-clear"></div>
 </header>
     
