--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- NAVIGATION -->
 <nav id="main-navigation">
     <ul>
-        <a href="https://www.linkedin.com/in/alexander-gouge-schajer-b19695140/">
+        <a href="www.linkedin.com/in/thegouge">
             <li>
                 <img class="link-img" src="../assets/images/In-White-121px-TM.png" alt="LinkedIn" title="LinkedIn">
             </li>
@@ -37,6 +37,7 @@
             <button class="dropbtn">
                 <img class="link-img" src="../assets/images/website.png" alt="Websites">
             </button>
+            <span class="drop-arrow">&#709;</span>
             <div class="dropdown-content">
                 <a href="https://thegouge.github.io/Real-Estate/">First Website</a>
                 <a href="https://thegouge.github.io/austin-website/">Austin Vocal Site</a>
@@ -47,6 +48,7 @@
             <button class="dropbtn">
                 <img class="link-img" id="js" src="../assets/images/javascript-logo.png" alt="javascript demos">
             </button>
+            <span class="drop-arrow">&#709;</span>
             <div class="dropdown-content">
                 <a href="https://thegouge.github.io/character-sheet">D&amp;D Character Sheet</a>
                 <a href="https://thegouge.github.io/number-server/">Number Server</a>
